# technical-assessment

./: .dockerignore  .gitignore  .lintstagedrc  ARCHITECTURE.md  Dockerfile  LINTING.md  Makefile  README.md  check_ingestion.py  docker-compose.yml  pyproject.toml
api/: Dockerfile  README.md  main.py
api/core/: __init__.py  accounts.py  config.py  exceptions.py  models.py
api/generators/: __init__.py  amount.py  date.py  journal.py  oil_gas.py
api/services/: __init__.py  gl_streamer.py
data/: api_keys.txt
database/: connection_manager.py  init_database.py  schema_design.md
database/init/: 01_create_schemas.sql  02_create_raw_tables.sql  03_create_metadata_tables.sql
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/: agg_monthly_financials.sql  dim_wells.sql  fct_gl_transactions.sql
dbt/models/staging/: schema.yml  stg_gl_records.sql
orchestration/: __init__.py  dagster.yml  definitions.py  resources.py
orchestration/assets/: ingestion.py
